<resources>
    <string name="app_name">BitcoinStats</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chart_activity">Bitcoin Market Price</string>
    <string name="title_notifications">Notifications</string>
    <string name="general_error">Sorry, market prices are temporarily unavailable</string>
    <string-array name="chart_spinner_items">
        <item>30 Days</item>
        <item>60 Days</item>
        <item>180 Days</item>
        <item>1 Year</item>
    </string-array>
</resources>
